--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="dist/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
